Fix cast-align warning in NetworkStateNotifierEfl.cpp https://bugs.webkit.org/show_bug.cgi?id=145915

Reviewed by Gyuyoung Kim.

* platform/network/efl/NetworkStateNotifierEfl.cpp:
(WebCore::NetworkStateNotifier::readSocketCallback):


Canonical link: https://commits.webkit.org/165234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187160 268f45cc-cd09-0410-ab3c-d52691b4dbfc